<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/usual_margin"
    android:padding="8dp"
    tools:context=".activity.FeedFragment">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/av_size"
            android:layout_height="@dimen/av_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/netology_foreground" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual_margin"
            android:layout_marginEnd="@dimen/usual_margin"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/date_published"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="@string/test_title" />

        <TextView
            android:id="@+id/date_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual_margin"
            android:layout_marginEnd="@dimen/usual_margin"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/test_date_published" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, date_published, title" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual_margin"
            android:layout_marginEnd="@dimen/usual_margin"
            android:paddingVertical="@dimen/usual_margin"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/barrier1"
            tools:text="@string/test_content" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:textSize="16sp"
        app:icon="@drawable/ic_liked_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

</androidx.constraintlayout.widget.ConstraintLayout>