<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/av_size"
        android:layout_height="@dimen/av_size"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology_foreground" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        android:layout_marginEnd="@dimen/usual_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/date_published"
        app:layout_constraintEnd_toStartOf="@+id/more_vert"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="@string/test_title" />

    <TextView
        android:id="@+id/date_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        android:layout_marginEnd="@dimen/usual_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/more_vert"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/test_date_published" />

    <ImageButton
        android:id="@+id/more_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, date_published, title, more_vert" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        android:layout_marginEnd="@dimen/usual_margin"
        android:paddingVertical="@dimen/usual_margin"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/barrier1"
        tools:text="@string/test_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageButton
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/usual_margin"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_sharp_favorite_24" />

    <TextView
        android:id="@+id/count_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@+id/likes"
        tools:text="@string/test_counter" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        android:layout_marginTop="@dimen/usual_margin"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/count_likes"
        app:layout_constraintStart_toEndOf="@+id/count_likes"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/count_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/share"
        tools:text="@string/test_counter" />

    <TextView
        android:id="@+id/count_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_margin"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share"
        tools:text="@string/test_counter" />

    <ImageButton
        android:id="@+id/viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/usual_margin"
        android:layout_marginEnd="@dimen/usual_margin"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/count_likes"
        app:layout_constraintEnd_toStartOf="@+id/count_viewed"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

</androidx.constraintlayout.widget.ConstraintLayout>